--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-native-web": "~0.19.6",
     "react-redux": "^8.1.3",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "expo-image": "~1.3.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
